# SimplicityHL-as-rust

./: Cargo.toml  README.md
src/: lib.rs
src/jet/: arithmetic.rs  bitcoin_without_primitives.rs  digital_signatures.rs  elliptic_curve_functions.rs  hash_functions.rs  issuance.rs  mod.rs  multi_bit_logic.rs  signature_hash_modes.rs  time_locks.rs  transaction.rs
