[package]
name = "simplicityhl-as-rust"
version = "0.1.7"
edition = "2021"
authors = ["Christian Lewe <ch_lewe@agdsn.me>"]
description = "Tools for working with SimplicityHL as literal Rust"
license = "CC0-1.0"
repository = "https://github.com/BlockstreamResearch/SimplicityHL-as-rust"

[dependencies]
either = "1.13.0"
